--- a/app/Resources/views/easyAdmin/TripManual/list.html.twig
+++ b/app/Resources/views/easyAdmin/TripManual/list.html.twig
@@ -6,15 +6,16 @@
     <h1>Handleiding</h1>
 
     <h2>Ingeven van vakanties en activiteiten</h2>
-    <p>Sinds november 2018 geven verbonden zelf hun activiteiten in aan de hand van een Google Spreadsheet.</p>
+    <p>Sinds december 2018 geven verbonden zelf hun activiteiten in aan de hand van een Google Spreadsheet.</p>
+    <p>Een lege cel zal achterliggend steeds de waarde van de cel erboven krijgen. Het is dus niet noodzakelijk je activiteiten of groepen steeds over te kopieeren naar de volgende cel.</p>
+    <p>Hieronder kan je voor elk verbond de bijbehorende spreadsheet vinden.</p>
     <p class="alert alert-warning"><strong>LET OP: </strong>Wees zeer voorzichtig met het delen van deze links. Iedereen
         die de link ooit toegestuurd krijgt, kan groepen en vakanties aanmaken, aanpassen en verwijderen. Deze pagina is
         bij gevolg zichtbaar voor alle <a href="/admin?entity=Admins&action=list">admins</a>.</p>
 
-    <p>Hieronder kan je voor elk verbond de bijbehorende spreadsheet vinden.</p>
-    <p>Kazou SMB: <a href="#">TODO</a></p>
-    <p>Kazou Antwerpen: <a href="#">TODO</a></p>
-    <p>Kazou Leuven: <a href="#">TODO</a></p>
+    <p>Kazou SMB: <a target="_blank" href="https://docs.google.com/spreadsheets/d/1r9CPTShpcV3FcU8lgf6zvSeFov2oE3pl3d7XWniHzSY/edit?usp=sharing">open document</a></p>
+    <p>Kazou Antwerpen: <a target="_blank" href="https://docs.google.com/spreadsheets/d/1i602BY-I1H4kMe5fqoPl9varDrUwmdBNymRs1eNvuZE/edit?usp=sharing">open document</a></p>
+    <p>Kazou Leuven: <a target="_blank" href="https://docs.google.com/spreadsheets/d/1mT0HPL2ny1ztTbjQh1L2t5W76Y2rTgaluy6eHtDDpf0/edit?usp=sharing">open document</a></p>
     <p>Kazou RMT: <a target="_blank" href="https://docs.google.com/spreadsheets/d/1pNdH4wnOgo1dAq_BKXYFuN4B-xPXJrrasvY6TW5oE_k/edit?usp=sharing">open document</a></p>
 
     <h2>foutmeldingen</h2>
