--- a/web/css/header.css
+++ b/web/css/header.css
@@ -1,8 +1,15 @@
 .main-header {
-    height: 96px;
+    height: 60px;
     background-color: #282f39;
     position: fixed;
     top: 0px;
+}
+
+.main-header .container {
+    display: flex;
+    justify-content: flex-end;
+    align-content: center;
+    height: 100%;
 }
 
 nav {
@@ -56,7 +63,7 @@ nav > ul > li > a:focus, nav > ul > li > a:hover {
 }
 
 .header-coverup {
-    height: 96px;
+    height: 60px;
 }
 
 .flex1 {
