--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -20,9 +20,8 @@
                 {{ form_start(form) }}
                     {{ form_row(form._username) }}
                     {{ form_row(form._password) }}
-                    <label for="login_form__remember_me">
-                        <input type="checkbox" id="_remember_me" name="_remember_me" value="1"> Ingelogd blijven
-                    </label>
+                        <input type="checkbox" id="_remember_me" name="_remember_me" value="1">
+                        <label for="_remember_me">Aangemeld blijven</label>
                     <div>
                         <button type="submit" class="btn btn-yellow">Aanmelden</button>
                         <span>Nog geen account? <a href="{{ path('user_register') }}">Registreren je hier</a></span>
